# rumcake

./: CONTRIBUTING.md  LICENSE  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yml
.github/workflows/: deploy-docs.yml
docs/: .gitignore  README.md  astro.config.mjs  feature-backlight.md  feature-bluetooth-host.md  feature-display.md  feature-split.md  feature-storage.md  feature-underglow.md  feature-usb-host.md  feature-via-vial.md  matrix-and-layout.md  package.json
docs/scripts/: gen_api_docs.js  head.html.hbs  nav.html.hbs  redirect.html.hbs
docs/src/content/docs/: index.md
docs/src/content/docs/en/features/: feature-bluetooth-host.md
docs/src/content/docs/features/: feature-backlight.md  feature-bluetooth-host.md  feature-display.md  feature-encoders.md  feature-media-keys.md  feature-split.md  feature-storage.md  feature-underglow.md  feature-usb-host.md  feature-via-vial.md
docs/src/content/docs/getting-started/: matrix-and-layout.md  setup-template.md
docs/src/content/docs/zh-cn/: index.md
docs/src/content/docs/zh-cn/features/: feature-backlight.md  feature-bluetooth-host.md  feature-display.md  feature-encoders.md  feature-media-keys.md  feature-split.md  feature-storage.md  feature-underglow.md  feature-usb-host.md  feature-via-vial.md
docs/src/content/docs/zh-cn/getting-started/: matrix-and-layout.md  setup-template.md
keyberon/: Cargo.toml
keyberon/keyberon-macros/: Cargo.toml
keyberon/keyberon-macros/src/: lib.rs
keyberon/src/: action.rs  analog.rs  chording.rs  key_code.rs  layout.rs  lib.rs  matrix.rs
rumcake/: Cargo.toml
rumcake-drivers/: Cargo.toml
rumcake-drivers/src/: is31fl3731.rs  lib.rs  nrf_ble.rs  ssd1306.rs  ws2812_bitbang.rs
rumcake-macros/: Cargo.toml
rumcake-macros/src/: backlight.rs  derive.rs  keyboard.rs  lib.rs  via.rs  vial.rs
rumcake-macros/src/drivers/: is31fl3731.rs  mod.rs  nrf_ble.rs  ssd1306.rs  ws2812.rs
rumcake-macros/src/hw/: nrf.rs  rp.rs  stm32.rs
rumcake/src/: display.rs  eeprom.rs  keyboard.rs  lib.rs  math.rs  nrf_ble.rs  pointer.rs  storage.rs  usb.rs
rumcake/src/backlight/: drivers.rs  mod.rs  rgb_matrix_animations.rs  simple_animations.rs  simple_matrix_animations.rs
rumcake/src/backlight/drivers/: is31fl3731.rs  mod.rs  ws2812_bitbang.rs
rumcake/src/backlight/rgb_backlight_matrix/: animations.rs
rumcake/src/backlight/simple_backlight/: animations.rs
rumcake/src/backlight/simple_backlight_matrix/: animations.rs
rumcake/src/bluetooth/: mod.rs  nrf_ble.rs
rumcake/src/display/: drivers.rs  mod.rs
rumcake/src/display/drivers/: mod.rs  ssd1306.rs
rumcake/src/drivers/: iqs5xx.rs  is31fl3731.rs  mod.rs  nrf_ble.rs  ssd1306.rs  ws2812_bitbang.rs
rumcake/src/hw/: mod.rs
rumcake/src/hw/drivers/: is31fl3731.rs  mod.rs  ws2812_bitbang.rs
rumcake/src/hw/mcu/: nrf.rs  rp.rs  stm32.rs
rumcake/src/lighting/: mod.rs  rgb_backlight_matrix.rs  simple_backlight.rs  simple_backlight_matrix.rs  underglow.rs
rumcake/src/split/: central.rs  drivers.rs  mod.rs  peripheral.rs
rumcake/src/split/drivers/: mod.rs  nrf_ble.rs  serial.rs
rumcake/src/underglow/: animations.rs  drivers.rs  mod.rs
rumcake/src/underglow/drivers/: mod.rs  ws2812_bitbang.rs
rumcake/src/via/: handlers.rs  mod.rs
rumcake/src/via/protocol_12/: keycodes.rs  mod.rs
rumcake/src/vial/: handlers.rs  mod.rs
rumcake/src/vial/protocol/: lighting.rs  mod.rs  via.rs  vialrgb.rs
