[package]
name = "rumcake-drivers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
embedded-graphics = { version = "0.8.1", featuers = ["defmt"] }
embedded-layout = "0.3.2"
embedded-text = "0.6.2"
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
heapless = "0.7.16"

rumcake = { path = "../rumcake", features = ["backlight", "display", "underglow"] }

# third party utilities for dealing with rgb values
smart-leds = "0.3.0"

# third party drivers for backlight
is31fl3731 = { git = "https://github.com/Univa/is31fl3731", features = ["async"] }

# third party drivers for display
ssd1306 = "0.8.2"

