[package]
name = "rumcake-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0"
syn = { version = "2.0.29", features = ["full"] }
darling = "0.20.3"
quote = "1.0"
heck = "0.4.1"

[dev-dependencies]
keyberon = { git = "https://github.com/TeXitoi/keyberon", branch = "master" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "memory-x", "stm32f303cb", "nightly", "time-driver-any", "exti"] }

[features]
stm32 = []
nrf = []

storage = []
