[package]
name = "rumcake"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.6", optional = true }
defmt = "0.3"
embedded-hal = "0.2.7"
embedded-hal-async = "1.0.0-rc.1"
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
embedded-io-async = "0.5.0"
embedded-graphics = { version = "0.8.1", featuers = ["defmt"] }
embedded-layout = "0.3.2"
embedded-text = "0.6.2"
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt"] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt", "integrated-timers", "executor-thread", "nightly"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt", "defmt-timestamp-uptime", "nightly"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt"] }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt", "nightly", "unstable-pac", "unstable-traits"], optional = true }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "b1abaa38", features = ["defmt", "nightly", "nfc-pins-as-gpio", "unstable-traits", "time-driver-rtc1"], optional = true }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", rev = "487f98e", optional = true }
tickv = { git = "https://github.com/tock/tock", rev = "18cf287" }
keyberon = { path = "../keyberon" }
once_cell = { version = "1.18.0", features = ["atomic-polyfill"], default-features = false }
static_cell = "1.0.0"
usbd-human-interface-device = "0.4.3"
packed_struct = { version = "0.10.0", default-features = false }
heapless = "0.7.16"
bitflags = "2.4.0"
ringbuffer = { git = "https://github.com/NULLx76/ringbuffer", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] } 
rand_core = { version = "0.6.4", default-features = false }
num = { version = "0.4.1", default-features = false }
num-traits = { version = "0.2", default-features = false } 
num-derive = "0.3"
libm = "0.2.7"

# serialization for split keyboard setups
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
postcard = { version = "1.0.7", features = ["experimental-derive"] }

# third party utilities for dealing with rgb values
smart-leds = "0.3.0"

# third party drivers for backlight
is31fl3731 = { git = "https://github.com/Univa/is31fl3731", features = ["async"] }

# third party drivers for display
ssd1306 = "0.8.2"

rumcake-macros = { path = "../rumcake-macros" }

[features]
default = []

drivers = []

#
# Chips
#

# STM32
stm32 = ["dep:cortex-m", "embassy-executor/arch-cortex-m", "dep:embassy-stm32", "rumcake-macros/stm32"]
stm32f072cb = ["stm32", "embassy-stm32/stm32f072cb", "embassy-stm32/time-driver-any"]
stm32f303cb = ["stm32", "embassy-stm32/stm32f303cb", "embassy-stm32/time-driver-any"]

# nRF5x
nrf = ["dep:cortex-m", "embassy-executor/arch-cortex-m", "dep:embassy-nrf", "rumcake-macros/nrf"]
nrf-ble = ["dep:nrf-softdevice", "nrf-softdevice/defmt", "nrf-softdevice/ble-sec", "nrf-softdevice/critical-section-impl", "nrf-softdevice/nightly"]
nrf52840 = ["nrf", "embassy-nrf/nrf52840", "nrf-softdevice?/nrf52840", "nrf-softdevice?/s140"]

storage = ["rumcake-macros/storage"]

#
# Keyboard features
#

# Via/Vial
via = []
vial = ["via", "_backlight"]

# Host communication
usb = []
bluetooth = ["nrf-softdevice?/ble-peripheral", "nrf-softdevice?/ble-gatt-server"]

underglow = []

_backlight = []
simple-backlight = ["_backlight"]
simple-backlight-matrix = ["_backlight"]
rgb-backlight-matrix = ["_backlight"]

display = []

split-peripheral = ["nrf-softdevice?/ble-peripheral", "nrf-softdevice?/ble-gatt-server"]
split-central = ["nrf-softdevice?/ble-central", "nrf-softdevice?/ble-gatt-client"]

